# deno-wasm

./: deno.json  index.html  main.js
lib/: rs_lib.generated.js  rs_lib_bg.wasm
rs_lib/: Cargo.toml
rs_lib/src/: dont fucking look at this shit.rs  lib.rs
