[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = "=0.2.83"
gloo = "0.2.0"
js-sys = "0.3.32"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlParagraphElement',
  'HtmlButtonElement',
  'console',
  'KeyboardEvent',
  'CssStyleDeclaration',
  'MouseEvent',
  'HtmlDivElement',
]